--- a/pwsafe/pwsafe.vcxproj.filters
+++ b/pwsafe/pwsafe.vcxproj.filters
@@ -51,7 +51,8 @@
     <AppxManifest Include="Package.appxmanifest" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="pwsafe_TemporaryKey.pfx" />
+    <None Include="Package.StoreAssociation.xml" />
+    <None Include="pwsafe_StoreKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml" />
