--- a/os/os.vcxproj
+++ b/os/os.vcxproj
@@ -147,6 +147,7 @@
       <CompileAsWinRT>true</CompileAsWinRT>
       <SDLCheck>true</SDLCheck>
       <AdditionalOptions>/await %(AdditionalOptions)</AdditionalOptions>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -195,24 +196,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="file.h" />
-    <ClInclude Include="os.h" />
-    <ClInclude Include="pch.h" />
     <ClInclude Include="rand.h" />
-    <ClInclude Include="targetver.h" />
     <ClInclude Include="typedefs.h" />
     <ClInclude Include="utf8conv.h" />
     <ClInclude Include="UUID.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="os.cpp" />
-    <ClCompile Include="pch.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
     <ClCompile Include="windows\file.cpp" />
     <ClCompile Include="windows\rand.cpp" />
     <ClCompile Include="windows\utf8conv.cpp" />
