Handle hardware backbutton on phones

--- a/pwsafe/pwsafe.vcxproj.filters
+++ b/pwsafe/pwsafe.vcxproj.filters
@@ -17,12 +17,14 @@
     <ClCompile Include="MainPage.xaml.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="PasskeyEntryPage.xaml.cpp" />
+    <ClCompile Include="ItemPage.xaml.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="App.xaml.h" />
     <ClInclude Include="MainPage.xaml.h" />
     <ClInclude Include="PasskeyEntryPage.xaml.h" />
+    <ClInclude Include="ItemPage.xaml.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\LockScreenLogo.scale-200.png">
