Changes to make the ARM build run. Not all changes are needed but I need more time to investigate what's the real problem. In the meantime it works.

--- a/pwsafe/pwsafe.vcxproj
+++ b/pwsafe/pwsafe.vcxproj
@@ -127,7 +127,7 @@
       <DisableSpecificWarnings>4453;28204</DisableSpecificWarnings>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>..\Debug\core\core.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\ARM\Debug\core\core.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
@@ -136,7 +136,7 @@
       <DisableSpecificWarnings>4453;28204</DisableSpecificWarnings>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>..\Release\core\core.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\ARM\Release\core\core.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
