--- a/os/os.vcxproj
+++ b/os/os.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="file.h" />
     <ClInclude Include="os.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="rand.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="typedefs.h" />
     <ClInclude Include="utf8conv.h" />
@@ -213,6 +214,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="windows\file.cpp" />
+    <ClCompile Include="windows\rand.cpp" />
     <ClCompile Include="windows\utf8conv.cpp" />
     <ClCompile Include="windows\UUID.cpp" />
   </ItemGroup>
