--- a/os/os.vcxproj.filters
+++ b/os/os.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="UUID.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="funcwrap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
